--- a/Assets/Scripts/2048Ball.Core.asmdef
+++ b/Assets/Scripts/2048Ball.Core.asmdef
@@ -2,7 +2,8 @@
     "name": "2048Ball.Core",
     "rootNamespace": "Core",
     "references": [
-        "GUID:2fdef4a859838e3449b625605ab13c25"
+        "GUID:2fdef4a859838e3449b625605ab13c25",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
